# mandelbrot-wgpu-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  _config.yml  build.rs  index.md
.github/workflows/: rust.yml
_layouts/: default.html
_sass/: jekyll-theme-slate.scss
cargo-docs/docs/: search-index.js
cargo-docs/docs/mandelbrot/: all.html  index.html  sidebar-items.js  struct.ICON.html
cargo-docs/mandelbrot/: constant.TITLE.html  constant.ZOOM_SENSITIVITY.html  fn.main.html
cargo-docs/mandelbrot/utils/: fn.create_watcher.html  fn.fps_command.html  static.POSITION_SIZE.html  static.VERTEX_SIZE.html  struct.JULIA_SIZE.html  struct.Position.html  struct.Vertex.html  struct.WindowSize.html  struct.Zoom.html  trait.DigitsCountable.html
cargo-docs/mandelbrot/views/: index.html  sidebar-items.js
docs/: search-index.js  settings.html  source-files.js
docs/docs/: aliases.js  search-index.js
docs/docs/mandelbrot/: fn.main.html  struct.ICON.html
docs/implementors/lazy_static/: trait.LazyStatic.js
docs/implementors/zerocopy/: trait.FromBytes.js
docs/mandelbrot/: all.html  constant.TITLE.html  constant.ZOOM_SENSITIVITY.html  fn.main.html  index.html  sidebar-items.js  static.ICON.html  struct.ICON.html
docs/mandelbrot/utils/: enum.CurrentView.html  fn.create_watcher.html  fn.fps_command.html  index.html  sidebar-items.js  (+23 more)
res/: gta_sa_icon
shaders/: arb-precision.glsl  double.vert  mandelbrot.frag  shader.frag  vertices.vert
src/: build.rs  main.rs  shader.frag  shader.vert  utils.rs
src/views/: mod.rs  prelude.rs  switchable.rs  utils.rs  view.rs
(+207 files in other folders)
