[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Jakub Koralewski\\ <contact@jcubed.me>"]
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.4.0"
env_logger = "0.7"
winit = "0.20.0-alpha4"
glsl-to-spirv = "0.1"
log = "0.4"
notify = "4.0.15"
wgpu_glyph = "0.6.0"
lazy_static = "1.4.0"
byteorder = "1.3.2"

[build-dependencies]
image = "0.22.4"
winit = "0.20.0-alpha4"
lazy_static = "1.4.0"
glsl-to-spirv = "0.1"
